# IOT-design-compete

./: .gitignore  README.md
backend/: README.md
docs/: README.md
docs/api/examples/: telemetry-as7341-proxy.json
docs/status/: 2026-07-14-integration-status.md
firmware/: README.md
firmware/arduino/SmartHome_NoCamera_RFID/: SmartHome_NoCamera_RFID.ino
firmware/esp32-c3/: README.md
firmware/esp32-c3/as7341-wifi-tcp/: C3_AS7341_WiFiTCP.ino  README.md  secrets.example.h
firmware/esp32-p4/: README.md
firmware/esp32-s3/: README.md
frontend/: README.md
物联网(5)/物联网/: README.md
物联网(5)/物联网/00_先看这里/: 剩余工作与排期.md  四人分工文档.md  团队分工与推进计划.md  提交材料清单.md  项目总览.md
物联网(5)/物联网/02_项目方案与管理/: FocusCube_任务清单与分工.md  剩余工作与排期.md
物联网(5)/物联网/03_硬件与采购/: EYE_Cube硬件能力与当前状态_2026-07-19.md  引脚分配_PINOUT.md  硬件BOM_FocusCube.md
物联网(5)/物联网/04_技术实现/: 固件计划与硬件配置.md  局域网接口说明.md  部署与联调指南.md
物联网(5)/物联网/04_技术实现/P4七寸屏工程/main/: CMakeLists.txt  Kconfig.projbuild  focuscube_data.c  focuscube_data.h  idf_component.yml  main.c
物联网(5)/物联网/04_技术实现/P4七寸屏工程/main/fonts/: README.md
物联网(5)/物联网/05_测试记录/: EYE完整功能验收_2026-07-19.md  README.md  SD卡测试报告.md  摄像头测试报告.md
物联网(5)/物联网/06_提交材料/: 00_提交材料总控与事实基线_2026-07-23.md  01_FocusCube完整设计方案重构稿_2026-07-23.md  02_实物演示视频脚本_2026-07-23.md  03_队伍信息表与分工说明_2026-07-23.md  04_提交前证据与素材清单_2026-07-23.md  05_答辩PPT结构与问答库_2026-07-23.md  README.md
物联网(5)/物联网/frontend/: API_INTEGRATION.md  README.md  app.js  index.html  run.bat  run.sh  serve.py  styles.css
物联网(5)/物联网/pc_backend/: .env.example  .gitignore  README.md  requirements.txt  run.py  run_linux_macos.sh
(+55 files in other folders)
